[package]
name = "rs_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["standalone"]
renderdoc = ["rs_render/renderdoc"]
editor = [
    "rs_shader_compiler_core/editor",
    "rs_render/editor",
    "rs_core_minimal/editor",
    "dep:anyhow",
]
standalone = [
    "rs_shader_compiler_core/standalone",
    "rs_render/standalone",
    "rs_core_minimal/standalone",
]
profiler = ["tracy-client/enable", "rs_render/profiler"]
plugin_shared_crate = []
network = ["dep:rs_network"]

[dependencies]
bitflags = "2.9.1"
md-5 = { version = "0.10.6" }
anyhow = { version = "1.0.98", optional = true }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.41"
log = "0.4.27"
env_logger = "0.11.8"
moka = { version = "0.12.10", default-features = false, features = ["sync"] }
image = "0.25.6"
lazy_static = "1.5.0"
walkdir = "2.5.0"
rayon = "1.10.0"
egui = { version = "0.31.1" }
raw-window-handle = "0.6.2"
url = { version = "2.5.4", features = ["serde"] }
percent-encoding = "2.3.1"
wgpu = "24.0.1"
glam = { version = "0.30.3", features = ["mint", "serde"] }
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
rand = { version = "0.9.1" }
tracy-client = { version = "0.18.0", default-features = false }
rapier3d = { version = "0.26.1", features = ["simd-stable", "serde-serialize"] }
uniform-cubic-splines = { version = "0.3" }
dyn-clone = "1.0.19"
downcast-rs = "2.0.1"
meshopt = "0.4.1"
rs_foundation = { path = "../rs_foundation" }
rs_audio = { path = "../rs_audio" }
rs_artifact = { path = "../rs_artifact" }
rs_render = { path = "../rs_render" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_shader_compiler_core = { path = "../rs_shader_compiler_core" }
rs_proc_macros = { path = "../rs_proc_macros" }
rs_render_types = { path = "../rs_render_types" }
rs_network = { path = "../crates/rs_network", optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30.11" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.0"
ndk-sys = "0.6.0"
