[package]
name = "rs_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["standalone"]
renderdoc = ["rs_render/renderdoc"]
editor = [
    "rs_shader_compiler_core/editor",
    "rs_render/editor",
    "rs_core_minimal/editor",
    "dep:anyhow",
]
standalone = [
    "rs_shader_compiler_core/standalone",
    "rs_render/standalone",
    "rs_core_minimal/standalone",
]
profiler = ["tracy-client/enable", "rs_render/profiler"]
plugin_shared_crate = []
network = ["dep:rs_network"]
android-native-activity = ["winit/android-native-activity"]

[dependencies]
bitflags = "2.9.4"
md-5 = { version = "0.10.6" }
anyhow = { version = "1.0.99", optional = true }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
log = "0.4.28"
env_logger = "0.11.8"
moka = { version = "0.12.10", default-features = false, features = ["sync"] }
image = "0.25.8"
lazy_static = "1.5.0"
walkdir = "2.5.0"
rayon = "1.11.0"
egui = { version = "0.32.2" }
raw-window-handle = "0.6.2"
url = { version = "2.5.7", features = ["serde"] }
percent-encoding = "2.3.2"
wgpu = "25.0.0"
glam = { version = "0.30.5", features = ["mint", "serde"] }
uuid = { version = "1.18.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
rand = { version = "0.9.2" }
tracy-client = { version = "0.18.2", default-features = false }
rapier3d = { version = "0.29.0", features = ["simd-stable", "serde-serialize"] }
uniform-cubic-splines = { version = "=0.3.1" }
dyn-clone = "1.0.20"
downcast-rs = "2.0.2"
meshopt = "0.5.0"
winit = { version = "0.30.12" }
rs_foundation = { path = "../rs_foundation" }
rs_audio = { path = "../rs_audio" }
rs_artifact = { path = "../rs_artifact" }
rs_render = { path = "../rs_render" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_shader_compiler_core = { path = "../rs_shader_compiler_core" }
rs_proc_macros = { path = "../rs_proc_macros" }
rs_render_types = { path = "../rs_render_types" }
rs_network = { path = "../crates/rs_network", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
ndk-sys = "0.6.0"
