[package]
name = "rs_hotreload_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8.5"
notify = "6.1.1"
notify-debouncer-mini = { version = "0.4.1" }
walkdir = "2.5.0"
regex = "1.11.0"
log = "0.4.22"
