[package]
name = "rs_media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "8.1.0"
cpal = "0.17.3"
image = "0.25.10"
bitflags = "2.11.1"
num-complex = "0.4.6"
log = "0.4.29"
rustfft = "6.4.1"
glam = { version = "0.30.10", features = ["mint"] }
mp4 = { version = "0.14.0" }
rs_foundation = { path = "../rs_foundation" }
rs_core_audio = { path = "../rs_core_audio" }

[build-dependencies]
rs_core_minimal = { path = "../rs_core_minimal" }
rs_build_util = { path = "../crates/rs_build_util" }
