[package]
name = "rs_media_cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
anyhow = { version = "1.0.98" }
mp4 = { version = "0.14.0" }
glam = { version = "0.30.3", features = ["mint"] }
rs_foundation = { path = "../rs_foundation" }
rs_media = { path = "../rs_media" }
