[package]
name = "rs_metis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
profiler = ["tracy-client/enable"]
required_detail_edges = []

[dependencies]
glam = { version = "0.30.8", features = ["mint"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
rapier3d = { version = "0.30.0", features = ["simd-stable", "serde-serialize"] }
meshopt = "0.6.2"
tracy-client = { version = "0.18.2", default-features = false }
log = "0.4.28"
rs_foundation = { path = "../rs_foundation" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_mesh_optimization = { path = "../crates/rs_mesh_optimization" }

[build-dependencies]
bindgen = "0.72.1"
