[package]
name = "rs_native_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rs_engine = { path = "../rs_engine" }
egui = { version = "0.28.1" }

[features]
plugin_shared_lib = []
plugin_shared_crate_export = []
plugin_shared_crate_import = []
default = []

[build-dependencies]
rs_core_minimal = { path = "../rs_core_minimal" }
