[package]
name = "rs_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
quote = "1.0.41"
prettyplease = "0.2.37"
dunce = "1.0.5"
path-slash = "0.2.1"
naga = { version = "27.0.0" }
wgpu = "27.0.1"
anyhow = { version = "1.0.100" }
toml_edit = "0.23.7"
rs_foundation = { path = "../rs_foundation" }
