[package]
name = "rs_render"
version = "0.1.0"
edition = "2021"

[features]
default = ["standalone"]
renderdoc = ["dep:renderdoc"]
editor = ["rs_shader_compiler/editor", "rs_core_minimal/editor"]
standalone = ["rs_shader_compiler/standalone", "rs_core_minimal/standalone"]
profiler = ["tracy-client/default"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.210", features = ["derive", "rc"] }
wgpu = { version = "0.20.1", features = ["spirv", "naga-ir"] }
naga = { version = "0.20.0" }
log = "0.4.22"
pollster = "0.3.0"
raw-window-handle = "0.6.2"
type-layout = "0.2.0"
glam = { version = "0.29.0", features = ["mint", "serde"] }
egui = { version = "0.28.1" }
egui-wgpu = { version = "0.28.1" }
image = "0.25.2"
dunce = "1.0.5"
path-slash = "0.2.1"
image_dds = { version = "0.6.0" }
ddsfile = "0.5.2"
tracy-client = { version = "0.17.4", default-features = false }
bitflags = "2.6.0"
rs_foundation = { path = "../rs_foundation" }
rs_shader_compiler = { path = "../rs_shader_compiler" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_render_types = { path = "../rs_render_types" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[target.'cfg(target_os = "windows")'.dependencies]
renderdoc = { version = "0.12.1", optional = true }
