[package]
name = "rs_render"
version = "0.1.0"
edition = "2021"

[features]
default = ["standalone"]
renderdoc = ["dep:renderdoc"]
editor = ["rs_shader_compiler_core/editor", "rs_core_minimal/editor"]
standalone = ["rs_shader_compiler_core/standalone", "rs_core_minimal/standalone"]
profiler = ["tracy-client/default"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.217", features = ["derive", "rc"] }
wgpu = { version = "23.0.1", features = ["spirv", "naga-ir"] }
naga = { version = "23.1.0" }
log = "0.4.22"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
type-layout = "0.2.0"
glam = { version = "0.29.2", features = ["mint", "serde"] }
egui = { version = "0.30.0" }
egui-wgpu = { version = "0.30.0" }
image = "0.25.5"
dunce = "1.0.5"
path-slash = "0.2.1"
image_dds = { version = "0.6.2" }
ddsfile = "0.5.2"
tracy-client = { version = "0.18.0", default-features = false }
bitflags = "2.6.0"
moka = { version = "0.12.8", default-features = false, features = ["sync"] }
rs_foundation = { path = "../rs_foundation" }
rs_shader_compiler_core = { path = "../rs_shader_compiler_core" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_render_types = { path = "../rs_render_types" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[target.'cfg(target_os = "windows")'.dependencies]
renderdoc = { version = "0.12.1", optional = true }
