[package]
name = "rs_render"
version = "0.1.0"
edition = "2021"

[features]
default = ["standalone", "serde"]
renderdoc = ["dep:renderdoc", "dep:windows", "dep:wgpu-hal"]
editor = ["rs_shader_compiler_core/editor", "rs_core_minimal/editor"]
standalone = [
    "rs_shader_compiler_core/standalone",
    "rs_core_minimal/standalone",
]
profiler = ["tracy-client/enable", "rs_metis/profiler"]
serde = ["wgpu/serde", "rs_render_core/serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
wgpu = { version = "27.0.1", features = ["spirv", "naga-ir"] }
naga = { version = "27.0.3" }
log = "0.4.29"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
type-layout = "0.2.0"
glam = { version = "0.30.10", features = ["mint", "serde"] }
egui = { version = "0.33.3" }
egui-wgpu = { version = "0.33.3" }
image = "0.25.9"
dunce = "1.0.5"
path-slash = "0.2.1"
ddsfile = "0.5.2"
tracy-client = { version = "0.18.4", default-features = false }
bitflags = "2.10.0"
moka = { version = "0.12.12", default-features = false, features = ["sync"] }
rapier3d = { version = "0.32.0", features = ["simd-stable", "serde-serialize"] }
rs_foundation = { path = "../rs_foundation" }
rs_shader_compiler_core = { path = "../rs_shader_compiler_core" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_render_types = { path = "../rs_render_types" }
rs_metis = { path = "../rs_metis" }
rs_artifact = { path = "../rs_artifact" }
rs_render_core = { path = "../crates/rs_render_core" }

[target.'cfg(all(target_os = "android", target_arch = "x86_64"))'.dependencies]
image_dds = { version = "0.7.2", default-features = false, features = [
    "ddsfile",
    "image",
    "strum",
] }

[target.'cfg(not(all(target_os = "android", target_arch = "x86_64")))'.dependencies]
image_dds = { version = "0.7.2" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[target.'cfg(target_os = "windows")'.dependencies]
renderdoc = { version = "0.12.1", optional = true }
windows = { version = "0.62.2", optional = true }
wgpu-hal = { version = "27.0.4", optional = true }
