[package]
name = "rs_shader_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["editor"]
editor = ["rs_render/editor", "rs_core_minimal/editor"]
standalone = ["rs_render/standalone", "rs_core_minimal/standalone"]
detect_encoding = ["dep:encoding_rs", "dep:chardetng"]

[dependencies]
anyhow = { version = "1.0.95" }
bincode = { version = "1.3.3" }
log = "0.4.22"
env_logger = "0.11.6"
clap = { version = "4.5.23", features = ["derive"] }
wgpu = "23.0.1"
naga = { version = "23.1.0", features = ["serialize", "deserialize"] }
pollster = "0.4.0"
dunce = "1.0.5"
path-slash = "0.2.1"
walkdir = "2.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
chardetng = { version = "0.1.17", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
rs_shader_compiler_core = { path = "../rs_shader_compiler_core" }
rs_render = { path = "../rs_render" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_foundation = { path = "../rs_foundation" }
