[package]
name = "rs_shader_compiler_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.15"
naga = "25.0.0"
wgpu = "25.0.0"
dunce = "1.0.5"
path-slash = "0.2.1"
log = "0.4.27"
env_logger = "0.11.8"
