[package]
name = "rs_standalone_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["editor", "renderdoc"]
renderdoc = ["rs_render/renderdoc", "rs_engine/renderdoc"]
editor = [
    "rs_render/editor",
    "rs_engine/editor",
    "rs_core_minimal/editor",
]
standalone = [
    "rs_render/standalone",
    "rs_engine/standalone",
    "rs_core_minimal/standalone",
]
plugin_shared_lib = ["rs_native_plugin/plugin_shared_lib"]
plugin_shared_crate_export = ["rs_native_plugin/plugin_shared_crate_export"]

[dependencies]
egui = { version = "0.28.1" }
log = "0.4.22"
wgpu = "0.20.1"
rs_render = { path = "../rs_render" }
rs_render_types = { path = "../rs_render_types" }
rs_foundation = { path = "../rs_foundation" }
rs_artifact = { path = "../rs_artifact" }
rs_engine = { path = "../rs_engine" }
rs_native_plugin = { path = "../rs_native_plugin" }
rs_core_minimal = { path = "../rs_core_minimal" }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.29.15" }