[package]
name = "rs_network"
version = "0.1.0"
edition = "2024"

[features]
network_debug_trace = []

[dependencies]
log = "0.4.32"
uuid = { version = "1.23.3", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
rs_artifact = { path = "../../rs_artifact" }
rs_core_minimal = { path = "../../rs_core_minimal" }
rs_foundation = { path = "../../rs_foundation" }

[build-dependencies]
bindgen = "0.72.1"
