[package]
name = "rs_render_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu_latest", "serde"]
wgpu_latest = ["dep:wgpu"]
wgpu28 = ["dep:wgpu28"]
profiler = ["tracy-client/enable"]
serde = ["wgpu?/serde", "wgpu28?/serde"]

[dependencies]
wgpu = { version = "29.0.3", features = ["spirv", "naga-ir"], optional = true }
wgpu28 = { package = "wgpu", version = "=28.0.0", features = [
    "spirv",
    "naga-ir",
], optional = true }
raw-window-handle = "0.6.2"
tracy-client = { version = "0.18.4", default-features = false }
pollster = "0.4.0"
log = "0.4.32"
