[package]
name = "rs_text"
version = "0.1.0"
edition = "2021"

[dependencies]
fontdue = { version = "0.9.3", features = ["parallel"] }
ab_glyph = "0.2.32"
ab_glyph_rasterizer = "0.1.10"
max_rects = "1.0.2"
moka = { version = "0.12.12", default-features = false, features = ["sync"] }
image = "0.25.9"
parley = "0.7.0"
harfrust = "0.5.0"
linebender_resource_handle = { version = "0.1.1", default-features = false }
log = "0.4.29"
rs_foundation = { path = "../../rs_foundation" }
rs_core_minimal = { path = "../../rs_core_minimal" }
rs_pack = { path = "../rs_pack" }

[dev-dependencies]
lyon = "1.0.16"
vello = "0.7.0"
rand = "0.9.2"
rs_render_core = { path = "../rs_render_core", default-features = false, features = [
    "wgpu_latest",
] }
